Name:		uuid-instance
Version:	0.0.999
Synopsis:	several class instances for uuid
Description: 	aeson, safecopy instances 
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     



Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base == 4.*, 
                   uuid == 1.2.*, 
                   safecopy == 0.6.*, 
                   aeson == 0.4.*, 
                   bytestring == 0.9.*, 
                   text == 0.11.*
                   
  Exposed-Modules: 
                   Data.UUID.Instances
  Other-Modules: 

 
		 